--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "YIDA LI"
   avatar           : "profile.jpg"
-  bio              : "PhD Candidate in Economics"
+  bio              : "Ph.D. Candidate in Economics"
   location         : "University of Washington"
   employer         : "Seattle, WA, US"
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
