--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "Ph.D. Candidate in Economics"
   location         : "University of Washington"
-  employer         : "Seattle, WA, US"
+  employer         : "Seattle, WA, USA"
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
  # googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : liyida@uw.edu
@@ -259,14 +259,14 @@ timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database
 
 
 # Plugins
-plugins:
+# plugins:
 #  - jekyll-paginate
 #  - jekyll-sitemap
 #  - jekyll-gist
 #  - jekyll-feed
 #  - jekyll-redirect-from
 # mimic GitHub Pages with --safe
-whitelist:
+# whitelist:
 #  - jekyll-paginate
 #  - jekyll-sitemap
 #  - jekyll-gist
